--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,15 @@ services:
       - SERVER_PORT= 8181
 #      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/books_db
 
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
 #  service-db:
 #    image: postgres:14.7-alpine
 #    environment:
