--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,32 +7,69 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
-#    depends_on:
-#      - service-db
+    depends_on:
+      - postgres
     environment:
-      - SERVER_PORT= 8081
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/books_db
+      SPRING_PROFILES_ACTIVE: stage
+      SPRING_DATASOURCE_URL: "jdbc:postgresql://postgres:5433/jmeterdb"
+      SPRING_DATASOURCE_USERNAME: username
+      SPRING_DATASOURCE_PASSWORD: password
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
 
   prometheus:
     image: prom/prometheus
     ports:
       - "9090:9090"
+    depends_on:
+      - postgres_exporter
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+    networks:
+      - jmeter-demo
 
-#  service-db:
-#    image: postgres:14.7-alpine
-#    environment:
-#      POSTGRES_USER: username
-#      POSTGRES_PASSWORD: password
-#    ports:
-#      - "15432:5432"
-#    volumes:
-#      - ./infrastructure/db/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
-#      - db-data:/var/lib/postgresql/data
-#    restart: unless-stopped
+  postgres:
+    image: postgres:14.7-alpine
+    environment:
+      POSTGRES_USER: "username"
+      POSTGRES_PASSWORD: "password"
+      POSTGRES_DB: "jmeterdb"
+    ports:
+      - "5433:5433"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U username -d jmeterdb" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    volumes:
+      - ./infrastructure/db/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
+      - db-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
+    command: ["-c", "port=5433"]
+
+  postgres_exporter:
+    image: prometheuscommunity/postgres-exporter:v0.10.1
+    depends_on:
+      - postgres
+    environment:
+      DATA_SOURCE_NAME: "postgres://username:password@postgres:5433/jmeterdb?sslmode=disable"
+#      DATA_SOURCE_URI: "postgres:5433/jmeterdb?sslmode=disable"
+#      DATA_SOURCE_USER: "username"
+#      DATA_SOURCE_PASS: "password"
+#      PG_EXPORTER_EXTEND_QUERY_PATH: "/etc/postgres_exporter/queries.yaml"
+    volumes:
+      - ./queries.yaml:/etc/postgres_exporter/queries.yaml:ro
+    ports:
+      - "9187:9187"
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
 
 #  pgadmin:
 #  container_name: pgadmin4_container
@@ -46,6 +83,10 @@ services:
 #  volumes:
 #    - pgadmin-data:/var/lib/pgadmin
 #
-#volumes:
-#  db-data:
+volumes:
+  db-data:
 #  pgadmin-data:
+
+networks:
+  jmeter-demo:
+    driver: bridge
