--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,4 +3,8 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 15s
     static_configs:
-      - targets: ['jmeter-demo-app-1:8181']
+      - targets: ['jmeter-demo-app-1:8081']
+  - job_name: 'postgres-exporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['jmeter-demo-postgres_exporter-1:9187']
