--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,6 +1,12 @@
 server.port=8081
 
 spring.application.name=app
+spring.liquibase.change-log=classpath:db/changelog.xml
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
