--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   app:
     image: jmeter-demo-app
+    container_name: app
     build:
       context: .
       dockerfile: Dockerfile
@@ -20,19 +21,23 @@ services:
 
   prometheus:
     image: prom/prometheus
+    container_name: prometheus
     ports:
       - "9090:9090"
     depends_on:
       - postgres_exporter
+      - kafka-exporter
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+    restart: unless-stopped
     networks:
       - jmeter-demo
 
   postgres:
     image: postgres:14.7-alpine
+    container_name: postgres
     environment:
       POSTGRES_USER: "username"
       POSTGRES_PASSWORD: "password"
@@ -55,14 +60,11 @@ services:
 
   postgres_exporter:
     image: prometheuscommunity/postgres-exporter:v0.10.1
+    container_name: postgres_exporter
     depends_on:
       - postgres
     environment:
       DATA_SOURCE_NAME: "postgres://username:password@postgres:5433/jmeterdb?sslmode=disable"
-#      DATA_SOURCE_URI: "postgres:5433/jmeterdb?sslmode=disable"
-#      DATA_SOURCE_USER: "username"
-#      DATA_SOURCE_PASS: "password"
-#      PG_EXPORTER_EXTEND_QUERY_PATH: "/etc/postgres_exporter/queries.yaml"
     volumes:
       - ./queries.yaml:/etc/postgres_exporter/queries.yaml:ro
     ports:
@@ -83,6 +85,65 @@ services:
 #  volumes:
 #    - pgadmin-data:/var/lib/pgadmin
 #
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
+
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    environment:
+#      KAFKA_ADVERTISED_LISTENERS: INSIDE://localhost:9092,OUTSIDE://localhost:9093
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_JMX_PORT: 9999
+      KAFKA_CREATE_TOPICS: "jmeter-topic:1:1"
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
+
+  kafka-exporter:
+    image: danielqsj/kafka-exporter
+    container_name: kafka-exporter
+    depends_on:
+      - kafka
+    command: [ "--kafka.server=kafka:9092"]
+    ports:
+      - 9308:9308
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
+
+  jmx-exporter:
+#    image: bitnami/jmx-exporter:latest
+    image: sscaling/jmx-prometheus-exporter
+    container_name: jmx-exporter
+#    ports:
+#      - "9001:9001"  # Порт, по которому будет работать jmx-exporter
+    ports:
+      - "5556:5556"
+    environment:
+      SERVICE_PORT: 5556
+    volumes:
+      - ./config.yaml:/opt/jmx-exporter/config.yaml  # Подключаем файл конфигурации
+    depends_on:
+      - kafka
+    restart: unless-stopped
+    networks:
+      - jmeter-demo
+
 volumes:
   db-data:
 #  pgadmin-data:
