--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,8 +3,16 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 15s
     static_configs:
-      - targets: ['jmeter-demo-app-1:8081']
+      - targets: ['app:8081']
   - job_name: 'postgres-exporter'
     scrape_interval: 15s
     static_configs:
-      - targets: ['jmeter-demo-postgres_exporter-1:9187']
+      - targets: ['postgres_exporter:9187']
+  - job_name: 'kafka-exporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['kafka-exporter:9308']
+  - job_name: 'jmx-exporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['jmx-exporter:5556']
