--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -12,6 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+spring.kafka.bootstrap-servers=localhost:9092
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.metrics.tags.enabled=true
