--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -8,6 +8,8 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+spring.kafka.bootstrap-servers=kafka:9092
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.metrics.tags.enabled=true
