+ demo-app-dashboard.json

--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -13,5 +13,6 @@ spring.kafka.bootstrap-servers=kafka:9092
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.metrics.tags.enabled=true
-management.metrics.distribution.percentiles.all=0.90,0.95,0.99
+management.metrics.distribution.percentiles.all=0.5,0.90,0.95,0.99
 management.metrics.distribution.percentiles-histogram.timer=true
+management.metrics.tags.application: ${spring.application.name}
